# YouTubedownloader

./: .gitignore  .replit  EXECUTABLE_README.md  GIT_GUIDE.md  PACKAGED_VERSION.md  README.md  YouTubeDownloader.spec  build.py  downstream.py  gitReadme.md  install.py  pyproject.toml  replit.nix  youtube_downloader.py
attached_assets/: Pasted--18-04-21-JonathanBaldwin-C-Users-JonathanBaldwin-OneDrive-sinoverpi-Documents-03--1741228598774.txt  Pasted--cd-C-tmp-YouTubeDownloader-yt-venv--1741229234645.txt  Pasted--python-build-py-346-INFO-PyInstaller-6-12-0-contrib-hooks-2025-1-346-INFO-Python-3-1-1741230820189.txt  Pasted--python-youtube-downloader-py-2025-03-06-10-31-27-816-INFO-Starting-YouTube-Downloader-a-1741286081478.txt  YouTubeDownloader.ps1
chrome_extension/: INSTALL.md  README.md  background.js  content.js  manifest.json  popup.html  popup.js
python_youtube_downloader/: EXECUTABLE_README.md  README.md  YouTubeDownloader.spec  build.py  install.py  runtime-hook.py  settings.json  youtube_downloader.py
yt_dlp_plugins/extractor/: threads.py
