[project]
name = "youtube-video-downloader"
version = "1.0.0"
description = "A powerful YouTube video downloader with Chrome extension integration"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "flask-cors>=5.0.1",
    "tk>=0.1.0",
    "yt-dlp>=2025.2.19",
]

[project.urls]
Homepage = "https://github.com/username/youtube-video-downloader"
Documentation = "https://github.com/username/youtube-video-downloader#readme"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"