[project]
name = "youtube-downloader"
version = "1.0.0"
description = "Desktop YouTube downloader (Tkinter GUI + local API for the Chrome extension)"
requires-python = ">=3.11"
dependencies = [
    "yt-dlp>=2025.2.19",
    "pyperclip>=1.9.0",
    "flask>=3.1.0",
    "flask-cors>=5.0.1",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.12.0",
]
